--- a/servises-page.html
+++ b/servises-page.html
@@ -66,8 +66,9 @@
                                     использовали небезизвестный универсальный код речей.
                                     </p>
                                 </div>
+                                <a href="#" class="button button__plases">Подробнее</a>
                             </div>
-                            <a href="#" class="button button__plases">Подробнее</a>
+                            
                         </li>
                         <li class="plases__item">
                             <img src="#" alt="Обезьяны" class="plases__image">
@@ -81,8 +82,9 @@
                                     использовали небезизвестный универсальный код речей.
                                     </p>
                                 </div>
+                                <a href="#" class="button button__plases">Подробнее</a>
                             </div>
-                            <a href="#" class="button button__plases">Подробнее</a>
+                            
                         </li>
                     </ul>
                     <div class="pagination">
@@ -145,7 +147,7 @@
             </main>
             <footer class="footer">
                 <a href="" class="logo logo--footer">
-                    <img src="./images/logo.png" alt="логотип компании" class="logo__pic">
+                    <img src="../images/logo.png" alt="логотип компании" class="logo__pic">
                 </a>
                 <nav class="menu menu--footer">
                     <ul class="menu__list">
